--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,7 @@
       "~/*": ["*"]
     }
   },
-  "include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts"]
+  "include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts", "**/*.ts",
+  "**/*.tsx",
+  "images.d.ts"]
 }
